--- a/search.html
+++ b/search.html
@@ -11,15 +11,15 @@
   <script>
   $( function() {
     var availableTags = [
-      "ActionScript",
-      "AppleScript",
-      "Asp",
-      "BASIC",
-      "C",
-      "C++",
-      "Clojure",
-      "COBOL",
-      "ColdFusion",
+      "funny",
+      "calm",
+      "energy",
+      "rock",
+      "jazz",
+      "happy",
+      "Sad",
+      "Slow",
+      "fast",
       "Erlang",
       "Fortran",
       "Groovy",
@@ -49,21 +49,6 @@
   <input id="tags">
 </div>
 
-
-
-
-
-<script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyAauOC4PC5WrE3Br4Ff1-HkA-FxBmh1QfQ",
-    authDomain: "breakbeats-4758a.firebaseapp.com",
-    databaseURL: "https://breakbeats-4758a.firebaseio.com",
-    storageBucket: "breakbeats-4758a.appspot.com",
-    messagingSenderId: "1058322946724"
-  };
-  firebase.initializeApp(config);
 
 
 
