trying new commit message; added search stuff; playlist listing still broken.

--- a/search.html
+++ b/search.html
@@ -8,6 +8,8 @@
  
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
+
   <script>
   $( function() {
     var availableTags = [
