--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="row">
           <div class="col s4">
-            <img class="logo" src="assets/style/images/logo.png" alt="Break/Beats" />
+            <img class="logo" src="assets/style/images/logo-magenta.png" alt="Break/Beats" />
           </div>
         </div>
         <div class="row">
@@ -54,7 +54,10 @@
       <div class="container">
         <div class="row">
           <div class="col s4">
-            <img class="logo" src="assets/style/images/logo.png" alt="Break/Beats" />
+            <img class="logo" src="assets/style/images/logo-magenta.png" alt="Break/Beats" />
+          </div>
+          <div class="col s4 offset-s4">
+            <a href="#" id="js-view-create" class="top-link"><h1>//create a playlist</h1></a>
           </div>
         </div>
         <div class="row">
@@ -129,7 +132,10 @@
       <div class="container">
         <div class="row">
           <div class="col s4">
-            <img class="logo" src="assets/style/images/logo.png" alt="Break/Beats" />
+            <img class="logo" src="assets/style/images/logo-slate.png" alt="Break/Beats" />
+          </div>
+          <div class="col s4 offset-s4">
+            <a href="#" id="js-view-search" class="top-link"><h1>//search playlists</h1></a>
           </div>
         </div>
         <div class="row">
@@ -145,7 +151,7 @@
             <h3>Selected</h3>
             <ul id="js-selected-list">
             </ul>
-            <a class="waves-effect btn" id="js-view-new-playlist">view</a>
+            <a class="waves-effect btn disabled" id="js-view-new-playlist">view</a>
           </div>
         </div>
       </div>
@@ -188,6 +194,16 @@
               <div id="js-user-tags">
               </div>
             </div>
+          </div>
+          <div class="col s3">
+            <div id="js-error-message">
+
+            </div>
+          </div>
+        </div>
+        <div class="disable" id="js-email-success">
+          <div class="round">
+            <i class="large material-icons">done</i>
           </div>
         </div>
       </div>
